# declarative-gpui

./: .output.txt  CHANGELOG.md  Cargo.toml  PUBLISHING.md  README.md
declarative-macros/: Cargo.toml
declarative-macros/src/: arg.rs  ast.rs  lib.rs
examples/: demo.rs
src/: declarative_ui.rs  lib.rs  main.rs
