[workspace]
members = [
    "declarative-macros",
]

[package]
name = "declarative-ui"
version = "0.1.0"
edition = "2024"
description = "A small declarative DSL for GPUI"
license = "MIT"
readme = "README.md"
keywords = ["gpui", "ui", "dsl"]
categories = ["gui"]
documentation = "https://docs.rs/declarative-ui"
repository = "https://github.com/DevPlus31/declarative-gpui"

[dependencies]
gpui = "0.2.2"
declarative-macros = { path = "declarative-macros" }
